--- a/Harden System Security/ReleaseNotes.txt
+++ b/Harden System Security/ReleaseNotes.txt
@@ -1,17 +1,21 @@
-* Updated dependencies to the latest versions.
+* Added displaying Last Boot Time to the home page.
 
-* Changed the "Boot-Start Driver Initialization Policy" to "Good and Unknown" instead of "Good only" in the Miscellaneous configurations category.
+* Added displaying System Manufacturer and Model to the home page.
 
-   * Added a new sub-category that will set it to "Good only". As with all sub-categories, this will not be applied by default when you apply the Miscellaneous category and you will have to check an extra box to apply it.
-     
-   * The "Good only" policy applies to the "Business", "Specialized Access Workstation" and "Privileged Access Workstation" device usage intents.
+* Added displaying Open Network Ports counts to the home page. It displays both TCP and UDP ports counts that are currently open on the system. It is updated every 4 seconds and just like other real-time info on the Home page, it will not run in the background when you navigate away from the Home page, so it won't use any unnecessary system resources.
 
-* Added a new toggle button to the Microsoft Security Baselines page, it is on/toggled by default. This toggle will apply the Optional Overrides that are recommended for enhanced user experience when using the Microsoft Security Baselines.
+* Added the ability to change Computer Name in the home page. The Computer Name tile is now clickable and when you press it, you will be able to set a new Computer Name. This feature will only be available when you run the app as Administrator and after changing the Computer Name, a system restart will be required for the changes to take effect.
 
-   * The reason for this change is that users usually apply the Microsoft Security Baseline on their system, which is mostly geared towards enterprise use, but then they find that some settings are not user-friendly for personal use. These optional overrides help to mitigate that situation. You can of course disable this toggle if you want to stick strictly to the Microsoft Security Baseline without any modifications.
+* Added displaying the names of all of the available GPUs on the system to the home page. The GPU tile is clickable so if you click on it, a new area will open displaying the full technical details of every GPU on the system.
 
-* Added a new policy to the Optional Overrides to allow elevation on Secure Desktop for Standard user accounts.
+* The information titles on the Home page now have proper rounded corners.
 
-* Added new Firewall Rules Management!
+* Reduced the amount of empty spaces in the Home page.
 
-Please make sure to visit GitHub repository's release section for full info.
+* The system time and time zone now display in the same tile on the Home page.
+
+* Added displaying the currently active Power Plan's name on the Home page.
+
+* Added displaying the real time SSD Temperature on the Home page.
+
+* Added French language support.
