Harden System Security v1.0.33.0
* Removed a policy from the [Optional Overrides category](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Overrides-for-Microsoft-Security-Baseline), named `Disabled "Configure password backup directory"`.

   * This is to increase compatibility with Windows Servers. This was the policy's description in the wiki document: Microsoft Security Baselines set its value to "Active Directory", but since the Harden System Security app does not apply to computers managed by domain controllers or Entra ID, there is no need for this policy to be active.

   * As part of addressing [this feature request](https://github.com/HotCakeX/Harden-Windows-Security/issues/280), the policy has been removed from the Optional Overrides category.

* Added a [new policy](https://learn.microsoft.com/en-us/previous-versions/windows/it-pro/windows-10/security/threat-protection/security-policy-settings/deny-log-on-through-remote-desktop-services) to the [Optional Overrides category](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Overrides-for-Microsoft-Security-Baseline): Allow signing in through Remote Desktop Services. This will allow you to use Remote Desktop (RDP) locally to sign into your machine. For Device Usage intents, it only applies to Developer, Gaming and School intents. By default, all accounts can sign into the machine through Remote Desktop Services, but Microsoft Security Baselines set that policy to block for all kinds of accounts.

* Fixed [an issue](https://github.com/HotCakeX/Harden-Windows-Security/issues/970) in the [Optional Windows Features category](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Optional-Windows-Features) by adding the `DismService.exe` component of the Harden System Security app to Attack Surface Reduction rules exclusions, only for the duration of the app's runtime, which is automatically removed when you close the app. Please refer to my comment here for further explanation: https://github.

--- a/Harden System Security/Strings/AR/SecurityMeasures.resw
+++ b/Harden System Security/Strings/AR/SecurityMeasures.resw
@@ -724,9 +724,6 @@
 <data name="NOC_GLOBAL_SETTING_ALLOW_CRITICAL_TOASTS_ABOVE_LOCK-NonAdmin" xml:space="preserve">
     <value>تعطيل إظهار التذكيرات ومكالمات VoIP الواردة على شاشة القفل</value>
 </data>
-<data name="BackupDirectory-OptionalOverrides" xml:space="preserve">
-    <value>تعطيل النسخ الاحتياطي لكلمة مرور حساب المسؤول المحلي إلى Active Directory.</value>
-</data>
 <data name="LocalAccountTokenFilterPolicy-OptionalOverrides" xml:space="preserve">
     <value>تطبيق قيود UAC على الحسابات المحلية في عمليات تسجيل الدخول عبر الشبكة</value>
 </data>
@@ -969,5 +966,17 @@
 </data>
 <data name="DriverLoadPolicyGoodAndUnknown-Miscellaneous" xml:space="preserve">
     <value>تم تعيين سياسة تهيئة برامج تشغيل بدء التمهيد إلى "جيد" و "غير معروف"</value>
+</data>
+<data name="SeDenyRemoteInteractiveLogonRight-OptionalOverrides" xml:space="preserve">
+    <value>السماح بتسجيل الدخول من خلال خدمات سطح المكتب البعيد. سيسمح لك هذا باستخدام سطح المكتب البعيد (RDP) محلياً لتسجيل الدخول إلى جهازك.</value>
+</data>
+<data name="DisplayLNKFileExtension-Miscellaneous" xml:space="preserve">
+    <value>عرض ملحق الملف لملفات الاختصار (.lnk) في مستكشف الملفات. يعتمد المهاجمون بشكل متكرر على الحالة المخفية الافتراضية للاختصارات لتمويه الحمولات الضارة كمستندات غير ضارة. يتيح لك الكشف عن الملحق التحقق من نوع الملف الحقيقي وتحديد الاختصارات الخادعة قبل التنفيذ.</value>
+</data>
+<data name="DisplayURLFileExtension-Miscellaneous" xml:space="preserve">
+    <value>عرض ملحق الملف لملفات (.url) في مستكشف الملفات. يمنع اختصارات الإنترنت من التنكر كملفات مشروعة. يخفف هذا من المخاطر الأمنية حيث يستخدم المهاجمون ملحقات مخفية لتمويه روابط التصيد الاحتيالي أو عمليات إعادة التوجيه الضارة كمستندات آمنة.</value>
+</data>
+<data name="DisplayPIFFileExtension-Miscellaneous" xml:space="preserve">
+    <value>عرض ملحق الملف لملفات (.pif) في مستكشف الملفات. تعمل ملفات معلومات البرنامج (PIF) بشكل مشابه لملفات .exe وغالباً ما يستخدمها المهاجمون لإخفاء البرامج الضارة خلف نوع ملف أقل شيوعاً.</value>
 </data>
 </root>
